Fixed Makefiles, constant names and header files to make the samples compiled correctly.

--- a/samples/echo/Makefile
+++ b/samples/echo/Makefile
@@ -1,12 +1,14 @@
 LIBS = -lps -lnuma
 LIB_DIR = -L../../lib
+INC = -I../../include
+CFLAGS = $(INC) -O2 -g -Wall
 
 .PHONY: clean
 
 all: echo
 
 echo: echo.c
-	gcc -O2 -g -Wall -o echo echo.c $(LIB_DIR) $(LIBS)
+	gcc $(CFLAGS) -o echo echo.c $(LIB_DIR) $(LIBS)
 
 clean:
 	rm -f echo
