--- a/samples/list_devices/Makefile
+++ b/samples/list_devices/Makefile
@@ -1,12 +1,14 @@
 LIBS = -lps
 LIB_DIR = -L../../lib
+INC = -I../../include
+CFLAGS = $(INC) -O2 -g -Wall
 
 .PHONY: clean
 
 all: list_devices
 
 list_devices: list_devices.c
-	gcc -O2 -g -Wall -o list_devices list_devices.c $(LIB_DIR) $(LIBS)
+	gcc $(CFLAGS) -o list_devices list_devices.c $(LIB_DIR) $(LIBS)
 
 clean:
 	rm -f list_devices
