--- a/samples/packet_generator/Makefile
+++ b/samples/packet_generator/Makefile
@@ -1,12 +1,14 @@
 LIBS = -lps -lnuma
 LIB_DIR = -L../../lib
+INC = -I../../include
+CFLAGS = -O2 -g -Wall $(INC)
 
 .PHONY: clean
 
 all: packet_generator
 
 packet_generator: packet_generator.c
-	gcc -O2 -g -Wall -o packet_generator packet_generator.c $(LIB_DIR) $(LIBS)
+	gcc $(CFLAGS) -o packet_generator packet_generator.c $(LIB_DIR) $(LIBS)
 
 clean:
 	rm -f packet_generator
