Renamed the library name to "psio" instead of confusing "ps" or "pslib".
 - Now the library name is "libpsio" and the header name is "psio.h".
 - Added a new compile target to build as shared library.

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,10 @@ Module.symvers
 *.ko.cmd
 
 .tmp_versions/
-lib/libps.a
+lib/libpsio.a
+lib/libpsio.so.*
+
+samples/echo/echo
+samples/list_devices/list_devices
+samples/packet_generator/packet_generator
+samples/rxdump/rxdump
