Backported the internal version of pspgen.
The key differences of the internal version:
 - Rate-limiting
 - Ability to set target MAC addresses

--- a/samples/packet_generator/Makefile
+++ b/samples/packet_generator/Makefile
@@ -5,10 +5,13 @@ CFLAGS = -O2 -g -Wall $(INC)
 
 .PHONY: clean
 
-all: packet_generator
+all: packet_generator pspgen
+
+pspgen: pspgen.c
+	gcc $(CFLAGS) -o pspgen pspgen.c $(LIB_DIR) $(LIBS) -lpthread
 
 packet_generator: packet_generator.c
 	gcc $(CFLAGS) -o packet_generator packet_generator.c $(LIB_DIR) $(LIBS)
 
 clean:
-	rm -f packet_generator
+	rm -f packet_generator pspgen *.o
