--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,5 @@ lib/libpsio.so.*
 samples/echo/echo
 samples/list_devices/list_devices
 samples/packet_generator/packet_generator
+samples/packet_generator/pspgen
 samples/rxdump/rxdump
