Add extra path pattern for linux source discovery process.

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -55,6 +55,7 @@ KSP :=  /lib/modules/$(BUILD_KERNEL)/build \
         /usr/src/linux-$($(BUILD_KERNEL) | sed 's/-.*//') \
         /usr/src/kernel-headers-$(BUILD_KERNEL) \
         /usr/src/kernel-source-$(BUILD_KERNEL) \
+        /usr/src/linux-source-$(BUILD_KERNEL) \
         /usr/src/linux-$($(BUILD_KERNEL) | sed 's/\([0-9]*\.[0-9]*\)\..*/\1/') \
         /usr/src/linux
 
