Add an example to use epoll-based rxdump.
- Run "make EPOLL=1" to make it use epoll.
- Currently this exhibits about 3% performance degradation compared to
  the original rxdump that used blocking ps_recv_chunk() calls.
  This might be due to duplicate linear search over multiple queues on
  epoll_wait() and ps_recv_chunk().  We need to inspect this effect on
  various multi-threaded & batching conditions.

--- a/samples/rxdump/Makefile
+++ b/samples/rxdump/Makefile
@@ -1,7 +1,10 @@
-LIBS = -lpsio
-LIB_DIR = -L../../lib
-INC = -I../../include
-CFLAGS = -O2 -g -Wall $(INC)
+LIBS := -lpsio
+LIB_DIR := -L../../lib
+INC := -I../../include
+CFLAGS := -O2 -g -Wall $(INC)
+ifdef EPOLL
+CFLAGS := $(CFLAGS) -DUSE_EPOLL
+endif
 
 .PHONY: clean
 
