refs #3 : Updating kernel supports up to 3.13
 * Currently I'm testing on Linux kernel 3.13 (which is the default for
   Ubuntu 14.04 LTS)

   - Tests on other versions are welcome!

 * The latest ixgbe original driver seems to have kernel compatibility
   issues as well. I have back-ported some codes from it and added my
   own modifications.

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -83,6 +83,7 @@ endif
 endif
 # Version file Search Path
 VSP :=  $(KOBJ)/include/generated/utsrelease.h \
+        $(KOBJ)/include/generated/uapi/linux/version.h \
         $(KOBJ)/include/linux/utsrelease.h \
         $(KOBJ)/include/linux/version.h \
         /boot/vmlinuz.version.h
